Fixed spacing on settings dialog

--- a/public/index.scss
+++ b/public/index.scss
@@ -695,6 +695,7 @@ $shadow-spread-radius: 0px;
     align-items: center;
     width: 100%;
     margin-bottom: 10px;
+    margin-bottom: 25px;
     padding-bottom: 25px;
     border-bottom: 2px solid gray;
 
@@ -727,6 +728,7 @@ $shadow-spread-radius: 0px;
 }
 
 .control {
+    margin-bottom: 25px;
     padding-bottom: 25px;
     border-bottom: 2px solid gray;
 }
@@ -739,6 +741,7 @@ $shadow-spread-radius: 0px;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 25px;
     padding-bottom: 25px;
     border-bottom: 2px solid gray;
 
